add outras estrofes

--- a/musica.html
+++ b/musica.html
@@ -22,8 +22,21 @@
         E o cansaço me dominou
         Minhas vistas se escureceram
         E o final da corrida chegou</p>
-    <p></p>    
-
     
+    <p>Este é o exemplo da vida
+        Para quem não quer compreender
+        Nós devemos ser o que somos
+        Ter aquilo que bem merecer
+        Nós devemos ser o que somos
+        Ter aquilo que bem merecer</p> 
+        
+    <p>Mas o tempo cercou minha estrada
+        E o cansaço me dominou
+        Minhas vistas se escureceram
+        E o final desta vida chegou
+
+    </p>
+
+
 </body>
 </html>
