testando video do youtube

--- a/musica.html
+++ b/musica.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/EdZt0X0YrRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     <h1>Estrada da Vida</h1>
     <span>Milionário e José Rico</span>
