--- a/musica.html
+++ b/musica.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="estilos.css"
+
 </head>
+
 <body>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/rxX1bmHsh-Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
@@ -35,5 +39,8 @@
         E o cansaço me dominou
         Minhas vistas se escureceram
         E o final desta vida chegou</b></p>
-</body>
-</html>
+
+
+    </body>
+
+    </html>
