--- a/musica.html
+++ b/musica.html
@@ -17,7 +17,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/rxX1bmHsh-Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     <h1>Estrada da Vida</h1>
-    <span>Milionário e José Rico</span>
+    <span><b>Milionário e José Rico</b></span>
 
     <p>Nesta longa estrada da vida
         Vou correndo e não posso parar
